Closed Bug 125949 Opened 24 years ago Closed 24 years ago

compiler warning at nsStaticNameTable.cpp:88

Categories

(Core :: XPCOM, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bryner, Assigned: alecf)

Details

nsStaticNameTable.cpp: In method `PRBool nsStaticCaseInsensitiveNameTable::Init (const char **, int)': nsStaticNameTable.cpp:88: warning: unused variable `nsDependentCString *str' alec, I don't think we need to assign the result of the placement-new into a variable here. Suggested fix: --- nsStaticNameTable.cpp 17 Dec 2001 07:06:36 -0000 1.8 +++ nsStaticNameTable.cpp 17 Feb 2002 01:32:57 -0000 @@ -84,9 +84,8 @@ NS_ASSERTION(temp1.Equals(temp2), "upper case char in table"); } #endif - // use placement-new to initialize the string object - nsDependentCString *str = - new (&mNameArray[index]) nsDependentCString(raw); + // use placement-new to initialize the string object + new (&mNameArray[index]) nsDependentCString(raw); nsCStringKey key(raw, len, nsCStringKey::NEVER_OWN); mNameTable->Put(&key, (void*)(index+1)); // to make 0 != nsnull }
r=bzbarsky
ah, you're right. sr=alecf if you feel like checking that in
checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.