Fixing a compiler warning (bug 125949).  r=bzbarsky, sr=alecf.